fixed overflowing pre box which destoyed layout

--- a/main.sass
+++ b/main.sass
@@ -62,6 +62,7 @@ body
     overflow: auto
     border: 1px gray solid
     width: 75%
+    max-width: $maxWidth
     overflow: auto
     word-wrap: normal
     white-space: pre
